# api-inspector

./: .gitignore  README.md  pyproject.toml
src/api_inspector/: __init__.py  cli.py  filters.py  formatter.py  interceptor.py  models.py  proxy.py
