[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-inspector"
version = "0.1.0"
description = "A mitmproxy-based network request inspector for development debugging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["mitmproxy", "proxy", "http", "https", "websocket", "debugging", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mitmproxy>=10.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
api-inspector = "api_inspector.cli:main"

[project.urls]
Homepage = "https://github.com/protagonists/api-inspector"
Repository = "https://github.com/protagonists/api-inspector"

[tool.hatch.build.targets.wheel]
packages = ["src/api_inspector"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
